fix navbar display and scrolling issue on mobile nav

--- a/css/style.scss
+++ b/css/style.scss
@@ -97,14 +97,26 @@ a {
     transition: 0.3s all ease-in-out;
 }
 
+button {
+    background: none;
+    border: none;
+}
+
 /* ****** */
 /* LAYOUT */
 /* ****** */
 
 header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    background-color: $white;
     padding: 1em 1.5em;
 
     div {
@@ -147,6 +159,7 @@ header {
             position: absolute;
             top: 0;
             right: 0;
+
             margin: 35px 15px 0 0;
         }
     }
@@ -159,13 +172,9 @@ header {
     }
 }
 
-.banner {
-    min-width: 100%;
-    max-height: 450px;
-    object-fit: cover;
-}
-
 main {
+    margin-top: 120px;
+
     .intro-section {
         display: flex;
         flex-direction: column;
@@ -196,6 +205,17 @@ main {
             }
         }
     }
+}
+
+.banner {
+    min-width: 100%;
+    max-height: 450px;
+    object-fit: cover;
+}
+
+.no-scroll {
+    overflow: hidden;
+    height: 100vh;
 }
 
 // for desktop screens
@@ -264,6 +284,7 @@ main {
 }
 
 // animations
+
 .slide-in-top {
     animation: slide-in-top 500ms ease;
 }
